--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      href="/favicon.ico"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Absolute Tempo / 絶対テンポ感</title>
+    <meta
+      name="twitter:card"
+      content="summary"
+    />
+    <meta
+      name="twitter:creator"
+      content="@rik31415926"
+    />
+    <meta
+      property="og:title"
+      content="Absolute Tempo / 絶対テンポ感"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:locale"
+      content="ja"
+    />
+    <meta
+      property="og:locale:alternate"
+      content="en"
+    />
+    <meta
+      property="og:url"
+      content="https://ef81sp.github.io/absolute-tempo/"
+    />
+    <meta
+      property="og:image"
+      content="/absolute-tempo/music_metronome.png"
+    />
+    <meta
+      property="og:description"
+      content="A game of guessing or accurately representing tempo. / テンポを推測したり正確に表したりするゲーム。"
+    />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script
+      type="module"
+      src="/src/main.ts"
+    ></script>
   </body>
 </html>
