--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     />
     <meta
       property="og:image"
-      content="/absolute-tempo/music_metronome.png"
+      content="https://ef81sp.github.io/absolute-tempo/absolute-tempo/music_metronome.png"
     />
     <meta
       property="og:description"
