twitter:creator を差し替え

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="twitter:creator"
-      content="@rik31415926"
+      content="@p_craft"
     />
     <meta
       property="og:title"
